--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.2.3",
+    "bootstrap": "^5.2.3",
     "framer-motion": "^9.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -16,6 +17,7 @@
     "react-multi-carousel": "^2.8.2",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.1",
+    "swiper": "^9.0.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
