--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.1",
+    "swiper": "^9.0.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
