--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-lazy-load-image-component": "^1.4.0-beta.0",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.1",
     "swiper": "^9.0.3",
